[modify]修改GET POST 參數正確使用方式
